--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "joi": "^17.12.3"
   }
 }
