--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@faker-js/faker": "^8.4.1",
     "@hapi/boom": "^10.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "faker": "^5.5.3",
-    "joi": "^17.12.3"
+    "joi": "^17.12.3",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   }
 }
