--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -25,6 +26,7 @@
     "express": "^4.19.2",
     "faker": "^5.5.3",
     "joi": "^17.12.3",
+    "mysql2": "^3.9.6",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
