--- a/curso-nodejs-postgres-13-step/curso-nodejs-postgres-13-step/docker-compose.yml
+++ b/curso-nodejs-postgres-13-step/curso-nodejs-postgres-13-step/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres:13
     environment:
       - POSTGRES_DB=my_store
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=nico
+      - POSTGRES_PASSWORD=admin123
     ports:
       - 5432:5432
     volumes:
@@ -21,16 +21,16 @@ services:
       - 5050:80
 
   mysql:
-      image: mysql:5
-      environment:
-          - MYSQL_DATABASE=my_store
-          - MYSQL_USER=root
-          - MYSQL_ROOT_PASSWORD=root
-          - MYSQL_PORT=3306
-      ports:
-          - "3306:3306"
-      volumes:
-          - ./mysql_data:/var/lib/mysql
+    image: mysql:5
+    environment:
+      - MYSQL_DATABASE=my_store
+      - MYSQL_USER=root
+      - MYSQL_ROOT_PASSWORD=admin123
+      - MYSQL_PORT=3306
+    ports:
+      - 3306:3306
+    volumes:
+      - ./mysql_data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -39,3 +39,5 @@ services:
       - PMA_HOST=mysql
     ports:
       - 8080:80
+
+
