--- a/curso-nodejs-postgres-13-step/curso-nodejs-postgres-13-step/package.json
+++ b/curso-nodejs-postgres-13-step/curso-nodejs-postgres-13-step/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "lint": "eslint",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
@@ -16,23 +16,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nodemon": "^3.1.0",
-    "prettier": "^3.2.5",
-    "sequelize-cli": "^6.6.2"
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
+    "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@hapi/boom": "^10.0.1",
+    "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "faker": "^5.5.3",
-    "joi": "^17.12.3",
-    "mysql2": "^3.9.6",
-    "pg": "^8.11.5",
+    "joi": "^17.4.2",
+    "mysql2": "^2.3.0",
+    "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.6.5"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
